--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                                             
                                         <div id="second__div-math5" class="back cover bookpage tra"><h1>МАТЕМАТИКА 5</h1></div>
                                         <div id="third__div-math5" class="front bookpage next__page-arrow tra">
-                                            <a class="lesson-link math5__id-1" href="#popup"><button><p class="theme__text">"Тема 1-го уроку 02.09.2022</p></button></a></li>
-                                            <a class="lesson-link math5__id-2" href="#popup"><button><p class="theme__text">"Тема 2-го уроку з математики" 5 клас. </p></button></a>
+                                            <a class="lesson-link math5__id-1" href="#popup"><button><p class="theme__text">" (ВІДЕО)  Тема 1-го уроку 02.09.2022 </p></button></a></li>
+                                            <a class="lesson-link math5__id-2" href="#popup"><button><p class="theme__text">" (ВІДЕО) Тема 2-го уроку з математики " 5 клас. </p></button></a>
                                             <a class="lesson-link math5__id-3" href="#popup"><button><p class="theme__text">"Тема 3-го уроку з математики" 5 клас. </p></button></a>
                                             <a class="lesson-link math5__id-4" href="#popup"><button><p class="theme__text">"Тема 4-го уроку з математики" 5 клас.</p></button></a>
                                             <a class="lesson-link math5__id-5" href="#popup"><button><p class="theme__text">"Тема 5-го уроку з математики" 5 клас.</p></button></a>
@@ -109,7 +109,7 @@
                                             <!-- <a class="lesson-link math5__id-10" href="#popup"><button><p class="theme__text">"Тема 10-го уроку з математики" 5 клас.</p></button></a> -->
                                         </div>
                                         <div class="back bookpage prev__page-arrow tra">
-                                            <a class="lesson-link math5__id-11" href="#popup"><button><p class="theme__text">"Тема 1-го уроку 02.09.2022</p></button></a></li>
+                                            <a class="lesson-link math5__id-11" href="#popup"><button><p class="theme__text">" (ВІДЕО) Тема 1-го уроку 02.09.2022 </p></button></a></li>
                                             <a class="lesson-link math5__id-12" href="#popup"><button><p class="theme__text">"Тема 2-го уроку з математики" 5 клас. 05.09.2022</p></button></a>
                                             <a class="lesson-link math5__id-13" href="#popup"><button><p class="theme__text">"Тема 3-го уроку з математики"</p></button></a>
                                             <a class="lesson-link math5__id-14" href="#popup"><button><p class="theme__text">"Тема 4-го уроку з математики"</p></button></a>
